--- a/ASP.Net_Core_Middleware/Views/Home/Index.cshtml
+++ b/ASP.Net_Core_Middleware/Views/Home/Index.cshtml
@@ -1,7 +1,14 @@
-﻿
+
 @{
     ViewData["Title"] = "Index";
 }
 
 <h1>Index is my liefline</h1>
 
+<h1>Todays date and time is @DateTime.Now</h1>
+
+@{
+    var name = "Sriman Ch";
+    var age = 22;
+}
+<p>My name is @name and I am @age years old.</p>
