--- a/ASP.Net_Core_Middleware/Views/Home/Index.cshtml
+++ b/ASP.Net_Core_Middleware/Views/Home/Index.cshtml
@@ -12,3 +12,21 @@
     var age = 22;
 }
 <p>My name is @name and I am @age years old.</p>
+
+@{
+    if(name == "Sriman Ch")
+    {
+        <h2>Hi nice to meet you</h2>
+    }   
+    else
+    {
+        <h2>Who are you</h2>
+    }
+}
+
+@{
+    for(int i=0;i<=3;i++)
+    {
+        <h2>@i</h2>
+    }
+}
